@@ -6,7 +6,7 @@
 []
   ***   at top-level: forsubgroup(h=[2,3],2,print(h))
   ***                                       ^---------
-  ***   incorrect type in forsubgroup [not a group] (t_VEC).
+  ***   incorrect type in forsubgroup [not a finite group] (t_VEC).
 []
 
 group: 1  1  1  1 
@@ -35,4 +35,6 @@ nb subgroup = 67
   ***   at top-level: subgrouplist([2,2],-1)
   ***                 ^----------------------
   *** subgrouplist: domain error in subgroup: index bound <= 0
+[Mat(2), Mat(3), Mat(1)]
+[Mat(3)]
 Total time spent: 1
